--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-parallax-tilt": "^1.7.236",
     "tailwind-merge": "^2.5.0"
   },
